# The-Caretaker

./: Cargo.toml  diesel.toml  docker-compose.yml
migrations/2020-10-18-202848_enabled_modules/: down.sql  up.sql
migrations/2020-10-19-155753_actions/: down.sql  up.sql
migrations/2020-10-21-121133_modules/: down.sql  up.sql
migrations/2020-10-26-191404_user_slowmode_invite_link/: down.sql  up.sql
migrations/2020-10-31-201041_rename_module_settings/: down.sql  up.sql
migrations/2020-10-31-211851_module_settings/: down.sql  up.sql
migrations/2020-11-08-183104_channel_user_activity_modules/: down.sql  up.sql
migrations/2021-04-22-100636_guild_settings/: down.sql  up.sql
migrations/2021-04-24-080649_module_exclusions/: down.sql  up.sql
migrations/2021-08-03-075543_drop_guild_prefix/: down.sql  up.sql
migrations/2021-08-03-182126_admin_role/: down.sql  up.sql
migrations/2021-08-10-114428_module_exclusion_pkey_fix/: down.sql  up.sql
src/: config.rs  error.rs  ext.rs  framework.rs  guild_settings.rs  handler.rs  latency_counter.rs  logging.rs  main.rs  management.rs  matcher.rs  models.rs  module.rs  schema.rs  tasks.rs
src/commands/: management.rs
src/framework/: command.rs  module_subcommand.rs
src/handler/: interaction.rs  message.rs
src/handler/interaction/: command.rs
src/handler/interaction/command/: module.rs  module_subcommand.rs
src/handler/interaction/command/module/: action.rs  enabled.rs  exclusion.rs  setting.rs
src/handler/interaction/command/module_subcommand/: action.rs  enabled.rs  exclusion.rs  setting.rs
src/matcher/: crosspost.rs  invite_link.rs  mass_ping.rs  selfbot.rs
src/module/: action.rs  cache.rs  exclusion.rs  settings.rs
