[package]
authors = ["Spanfile <spansdev@gmail.com>"]
edition = "2018"
name = "the-caretaker"
version = "0.1.0"

[dependencies]
anyhow = "1.0.33"
chrono = "0.4.19"
circular-queue = "0.2.6"
diesel = {version = "1.4.5", features = ["postgres"]}
diesel-derive-enum = {version = "1.1.0", features = ["postgres"]}
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
envy = "0.4.1"
fern = "0.6.0"
humantime = "2.0.1"
log = "0.4.11"
nilsimsa = "0.2.0"
serde = {version = "1.0.117", features = ["derive"]}
serenity = "0.9.0-rc.4"
shellwords = "1.1.0"
structopt = {version = "0.3.20", default-features = false}
strum = {version = "0.19.5", features = ["derive"]}
thiserror = "1.0.21"
tokio = {version = "0.2.22", features = ["macros", "signal", "sync"]}
